--- a/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
+++ b/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
@@ -666,6 +666,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Exportar Excel"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_ExportarExcelMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jb_ExportarlXMLconSch">
               <Properties>
